--- a/Gravity.vcxproj.filters
+++ b/Gravity.vcxproj.filters
@@ -23,16 +23,16 @@
     <ClInclude Include="classes\perfomance\Perfomance.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="classes\math\vec.h">
+    <ClInclude Include="classes\linalg\linalg.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="classes\math\vecN.h">
+    <ClInclude Include="classes\linalg\mat.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="classes\math\mat.h">
+    <ClInclude Include="classes\linalg\vec.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="classes\math\linalg.h">
+    <ClInclude Include="classes\linalg\vecN.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
